--- a/metadata.yaml
+++ b/metadata.yaml
@@ -38,5 +38,6 @@ subjects:
 - !lcsh 'Seville (Spain) -- History'
 - !lcsh 'Seville (Spain) -- Biography'
 - !lcc 'DP'
+- GITenberg
 title: Cosas nuevas y viejas (apuntes sevillanos)
 url: http://www.gutenberg.org/ebooks/35905
